--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.5.0",
+    "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
   },
