--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "passport-jwt": "^4.0.0",
     "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
